When an object is moved, a subset of animation tracks are automatically reapplied to reflect it.  Also added lots of generics in Scene.
git-svn-id: svn://svn.code.sf.net/p/aoi/code@113 8e91ba97-c92a-0410-817f-f646a3b87f38